Can't bake texture with multiple objects. #77298

Closed
opened 2020-06-03 10:47:07 +02:00 by Blendy · 24 comments

Edit by @Alaska

Bisecting shows d9773edaa3 as the cause for the issue.


System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-05-29 18:08, hash: 2ee94c954d
Worked: 2.82a

Short description of error
Can't bake texture with multiple objects. I selected multiple objects to bake, but only one object had been baked to the texture.

Exact steps for others to reproduce the error
Just follow a common texture baking workflow.

multi_object_baking_bug.png
multi_obj_baking_bug.blend

Edit by @Alaska Bisecting shows d9773edaa3 as the cause for the issue. --- **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-05-29 18:08, hash: `2ee94c954d` Worked: 2.82a **Short description of error** Can't bake texture with multiple objects. I selected multiple objects to bake, but only one object had been baked to the texture. **Exact steps for others to reproduce the error** Just follow a common texture baking workflow. ![multi_object_baking_bug.png](https://archive.blender.org/developer/F8573747/multi_object_baking_bug.png) [multi_obj_baking_bug.blend](https://archive.blender.org/developer/F8573751/multi_obj_baking_bug.blend)
Author

Added subscriber: @Rays-Lv

Added subscriber: @Rays-Lv

#79780 was marked as duplicate of this issue

#79780 was marked as duplicate of this issue

#78072 was marked as duplicate of this issue

#78072 was marked as duplicate of this issue

Added subscriber: @dfelinto

Added subscriber: @dfelinto

For the records, 2.83 is working fine. I haven't checked master (2.90) yet.

For the records, 2.83 is working fine. I haven't checked master (2.90) yet.
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

@dfelinto I can confirm 2.83.0 is fine, 2.90.0 (2020-06-02 22:21) 2e52b3206c produces issues for me.

I will bisect Blender to find the commit.

@dfelinto I can confirm 2.83.0 is fine, 2.90.0 (2020-06-02 22:21) `2e52b3206c` produces issues for me. I will bisect Blender to find the commit.
Member

Bisecting shows d9773edaa3 as the culprit. Updating description of the task.

Bisecting shows d9773edaa3 as the culprit. Updating description of the task.
Member

Added subscribers: @LukasStockner, @brecht

Added subscribers: @LukasStockner, @brecht
Member
CC @brecht @LukasStockner

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3
Added subscribers: @iss, @bigbadcat3d, @NXGEN, @Ariel-Tavori, @Varzov, @dupoxy

Added subscriber: @FinbarrORiordan

Added subscriber: @FinbarrORiordan
Lukas Stockner was assigned by Dalai Felinto 2020-08-10 17:42:20 +02:00

This issue was referenced by bc5d144855

This issue was referenced by bc5d144855d540d6ea663b0bb13607b692b6b5f0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

I thought only #79780 wasnt solved, but looks like this is not solved either.

I thought only #79780 wasnt solved, but looks like this is not solved either.
Member

Added subscribers: @datadieb, @Carlosan

Added subscribers: @datadieb, @Carlosan
Member

Added subscriber: @HBObiWan

Added subscriber: @HBObiWan
Lukas Stockner was unassigned by Brecht Van Lommel 2020-08-25 15:43:47 +02:00
Brecht Van Lommel self-assigned this 2020-08-25 15:43:47 +02:00

This issue was referenced by blender/cycles@f6b562d445

This issue was referenced by blender/cycles@f6b562d4457aa219bd0690f74fe5b07d13d3e196

This issue was referenced by 21cb6f09ff

This issue was referenced by 21cb6f09ffa82e9d2ef8fc41e7161f824984989b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:27:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77298
No description provided.